--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <!-- Marked.js (for Markdown rendering) -->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <!-- DOMPurify (for Markdown XSS Protection) -->
+    <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.8/dist/purify.min.js"></script>
 
     <!-- localForage (IndexedDB Wrapper for large capacity) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.10.0/localforage.min.js"></script>
